--- a/style.css
+++ b/style.css
@@ -54,9 +54,11 @@ label {
   text-align: center
 
 }
-.box {
-  background-color: white;
-  color: black;
+
+.box{
+width: 100px;
+height: 100px;
+border: 1px solid black;
 }
 
 
