--- a/style.css
+++ b/style.css
@@ -56,10 +56,23 @@ label {
 }
 
 .box{
-width: 100px;
-height: 100px;
-border: 1px solid black;
+    width: 700px;
+    height: 200px;
+    border: 3px solid black;
+    margin: 100bp;
+    padding: 15px;
+    align-items: center;
+    background-color: #92a8d1;
+
 }
 
 
-
+.box1{
+    width: 700px;
+    height: 150px;
+    border: 3px solid black;
+    margin: 100bp;
+    padding: 15px;
+    align-items: center;
+    background-color: #92a8d1;
+}
