--- a/style.css
+++ b/style.css
@@ -52,27 +52,27 @@ label {
   color: black;
   font-family: sans-serif;
   text-align: center
-
+  font-size: xx-small;
 }
 
 .box{
-    width: 700px;
+    width: 400px;
     height: 200px;
     border: 3px solid black;
     margin: 100bp;
     padding: 15px;
     align-items: center;
-    background-color: #92a8d1;
+    background-color: #ddfada;
 
 }
 
 
 .box1{
-    width: 700px;
-    height: 150px;
+    width: 400px;
+    height: 100px;
     border: 3px solid black;
     margin: 100bp;
     padding: 15px;
     align-items: center;
-    background-color: #92a8d1;
+    background-color: #FFFFE0;
 }
