--- a/style.css
+++ b/style.css
@@ -76,3 +76,11 @@ label {
     align-items: center;
     background-color: #FFFFE0;
 }
+
+.vertical {
+            border-left: 6px solid black;
+            height: 200px;
+            position:absolute;
+            left: 50%;
+            margin-left: -3px;
+        }
