--- a/style.css
+++ b/style.css
@@ -84,3 +84,7 @@ label {
             left: 50%;
             margin-left: -3px;
         }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
