--- a/style.css
+++ b/style.css
@@ -6,30 +6,29 @@
 }
 .header
 {
-	background: rgb(0,0,0);
-	text-align: center;
-	padding: 60px;
+	background: rgb(255,255,255);
+	text-align: left;
+	padding: 30px;
   	color: white;
- 	font-size: 20px;
+ 	font-size: 30px;
 }
 body
 {
 	background-image:url("https://media.istockphoto.com/vectors/abstract-hexagon-wallpaper-white-background-3d-vector-illustration-vector-id1212342896?k=20&m=1212342896&s=612x612&w=0&h=fp3B4g_hE54snO4Nf1ggElVnI0gD9s7tPd5JU0eFl9Q");
 	background-size: cover;
 	background-position:center;
-
 	font-family: sans-serif;
 }
 .menu-bar
 {
-	background:rgb(0,120,0);
-	text-align: center;
+	background:rgb(0,0,128);
+	text-align: left;
 }
 .menu-bar ul
 {
 	display: inline-flex;
 	list-style: none;
-	color: #fff;
+	color: #FFFFFF;
 }
 .menu-bar ul li
 {
@@ -40,11 +39,11 @@ body
 .menu-bar ul li a
 {
 	text-decoration: none;
-	color: #fff;
+	color: #FFFFFF;
 }
-.active, .menu-bar ul li:hover
+.active,.menu-bar ul li:hover
 {
-	background: #2bab0d;
+	background: #000080;
 	border-radius: 3px;
 }
 label {
@@ -62,7 +61,7 @@ label {
     margin: 100bp;
     padding: 15px;
     align-items: center;
-    background-color: #ddfada;
+    background-color: #FDF5E6;
 
 }
 
@@ -74,7 +73,7 @@ label {
     margin: 100bp;
     padding: 15px;
     align-items: center;
-    background-color: #FFFFE0;
+    background-color: #F0FFFF;
 }
 
 .vertical {
