--- a/style.css
+++ b/style.css
@@ -57,11 +57,13 @@ label {
 .box{
     width: 400px;
     height: 200px;
-    border: 3px solid black;
-    margin: 100bp;
+    border: 3px solid grey;
+    border-style: inset;
+    border-radius: 12px;
+    margin: 12px 10px 3px;
     padding: 15px;
     align-items: center;
-    background-color: #FDF5E6;
+    background-color: #F5F5F5;
 
 }
 
@@ -69,11 +71,13 @@ label {
 .box1{
     width: 400px;
     height: 100px;
-    border: 3px solid black;
-    margin: 100bp;
+    border: 3px solid grey;
+    border-style: inset;
+    border-radius: 12px;
+    margin: 12px 10px 3px;
     padding: 15px;
     align-items: center;
-    background-color: #F0FFFF;
+    background-color: #F5F5F5;
 }
 
 .vertical {
