--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 {
 	background: rgb(255,255,255);
 	text-align: left;
-	padding: 30px;
+	padding: 20px;
   	color: white;
  	font-size: 30px;
 }
@@ -56,12 +56,12 @@ label {
 
 .box{
     width: 400px;
-    height: 200px;
+    height: 150px;
     border: 3px solid grey;
     border-style: inset;
     border-radius: 12px;
     margin: 10px 10px 3px;
-    padding: 15px;
+    padding: 5px;
     align-items: center;
     background-color: #F5F5F5;
 
@@ -70,7 +70,7 @@ label {
 
 .box1{
     width: 400px;
-    height: 100px;
+    height: 75px;
     border: 3px solid grey;
     border-style: inset;
     border-radius: 12px;
@@ -78,6 +78,7 @@ label {
     padding: 15px;
     align-items: center;
     background-color: #F5F5F5;
+    font-size: 15px;
 }
 
 .vertical {
